# Console-Messenger

./: .gitignore  ~$КР.docx
Client/: CMakeLists.txt
Client/source/: Client.h  Console.h  main.cpp
Client/source/Menu/: Menu.h
Client/source/Menu/Controls/: Controls.h
Client/source/Program/: Chat.h  Program.h  ProgramState.h  RecipientMenu.h
Client/source/Program/Controls/: Button.h  Controls.h  InputField.h  UpdateFunctions.h
ModbusPacket/: ModbusPacket.h
Server/resources/: clients.txt
Server/resources/chats/: Max 1312 .txt  Max Max .txt  andrey Max .txt  sasha 11111111 .txt  sasha Alexey .txt  sasha Max .txt  sasha andrey .txt  sasha sPIDOR_man .txt  sasha sasha .txt
Server/source/: Server.h  main.cpp
